# gsfml

./: .gitignore  Makefile  README.md  host.soest  host.template
ADMIN/: README.TXT  background.html  build_png.sh  build_release.sh  contribute.html  fz_compare.sh  fz_dupchecker.sh  fz_reformatter.sh  fz_segsplitter.sh  fz_shp2gmt.sh  gsfml_map.sh  index.html  setlinks.sh
HELLDATA/: HELL_news.html  README.TXT  build_HELL_site.sh  file_format.txt
HELLDATA/Cande++_2010_GJI/: Cande2010DataFileDescription.doc  description.Cande++_2010_GJI.docx  info.txt  rename.sh
HELLDATA/Cande+Patriat_2015_GJI/: info.txt  rename.sh
HELLDATA/Gaina++_1998_JGR/: an25y_help_finn  an26o_help_finn  an27o_help_finn  an28y_help_finn  an29y_help_finn  an30y_help_finn  an31y_help_finn  an32y_help_finn  an33y_help_finn  info.txt  rename.sh
HELLDATA/Gaina++_1999_JGR/: a24o.yxun_hel  a25y.yxun_hel  a26o.yxun_hel  a27o.yxun_hel  info.txt  rename.sh
HELLDATA/Gaina++_2002_EPSL/: a13_hel  a18_hel  a20_hel  a21_hel  a22_hel  a25_hel  a31_hel  a33_hel  a34_hel  a6_hel  info.txt  rename.sh
HELLDATA/Granot++_2013_GRL/: anom12o_tj_nov2010.points  anom13o_tj_nov2010.points  anom16y_tj_nov2010.points  anom18o_tj_nov2010.points  info.txt  rename.sh
HELLDATA/Granot+Dyment_2018_NatComms/: AUS-ANT-MBL.8o.data.Granot+Dyment_2018_NatComms.pick  MCQ-ANT.3ay.data.Granot+Dyment_2018_NatComms.pick  info.txt  readme.Granot+Dyment_2018_NatComms.txt  rename.sh
HELLDATA/Muller++_1999_SedBasinWorld/: info.txt  rename.sh
HELLDATA/Whittaker++_2007_Science/: READMe.txt  info.txt  rename.sh
HELLDATA/Whittaker++_2013_G3/: info.txt  rename.sh
HELLDATA/Williams++_2011_Tectonics/: info.txt  rename.sh
MLDATA/: ChangeLog  ML_news.html  README.MLDATA  build_ML_site.sh  enforcerer.c  file_format.txt  newformat.sh  pick_fig.sh  reformatter.c  renamer.sh  shp2gmt.sh  timescales.txt
MLDATA/AtlanticOcean/: Cande++_1988_JGR.gmt  Eagles+Scott_2014_GPC.gmt  Eagles_2016_GondwanaResearch.gmt  Gaina++_2002_EPSL.gmt  Granot+Dyment_2015_EPSL.gmt  Klitgord+Schouten_1986_WNAtlReg.gmt  Kovacs++_2002_Tectonophys.gmt  LaBreque+Cande_1986_ODPSynth.gmt  LaBreque+Hayes_1979_EPSL.gmt  Livermore++_2005_EPSL.gmt  Marks+Stock_2001_MGR.gmt  Martin++_1982_GJI.gmt  Merkouriev+DeMets_2008_GJI.gmt  Merkouriev+DeMets_2014_GJI.gmt  Muller++_1999_Caribbean.gmt  Perez-Diaz+Eagles_2014_Tectonics.gmt  Rabinowitz+LaBreque_1979_JGR.gmt  References.txt  Srivastava+Tapscott_1986_GeolNAm.gmt  readme.Eagles+Scott_2014_GPC.txt  readme.Eagles_2016_GondwanaResearch.txt  readme.Gaina++_2002_EPSL.txt  readme.Marks+Stock_2001_MGR.txt  readme.Merkouriev+DeMets_2008_GJI.txt  readme.Merkouriev+DeMets_2014_GJI.txt  readme.Perez-Diaz+Eagles_2014_Tectonics.txt
MLDATA/IndianOcean/: Baines++_2007_G3.gmt  Cande++_2010_GJI.gmt  Cande+Patriat_2015_GJI.gmt  Cande+Stock_2004_GJI.gmt  Chaubey++_2002_GeoSocLonSP.gmt  Davis++_2016_GondwanaResearch.gmt  DeMets++_2005_GJI.gmt  Eagles+Hoang_2013_GJI.gmt  Eagles+Koenig_2008_GJI.gmt  Eagles+Wibisono_2013_GJI.gmt  Fournier++_2010_JGR.gmt  Gaina++_2007_GJI.gmt  Gaina++_2015_Tectonics.gmt  Gibbons++_2013_JGR.gmt  Granot++_2013_GRL.gmt  Jacob++_2014_JGR.gmt  Leinweber+Jokat_2012_Tectonophysics.gmt  Merkouriev+DeMets_2006_G3.gmt  Mihut++_1998_WABS.gmt  Muller++_1998_PESA.gmt  References.txt  Royer++_1988_Tectonophys.gmt  Segoufin++_2004_Map.gmt  Tikku+Cande_1999_JGR.gmt  Veevers_1986_EPSL.gmt  Whittaker++_2007_Science.gmt  Williams++_2013_Tectonics.gmt  readme.Cande+Stock_2004_GJI.txt  readme.Chaubey++_2002_GeoSocLonSP.txt  readme.DeMets++_2005_GJI.txt  readme.Fournier++_2010_JGR.txt  readme.Gaina++_2007_GJI.txt  readme.Gaina++_2015_Tectonics.txt  readme.Granot++_2013_GRL.txt  readme.Jacob++_2014_JGR.txt  readme.Merkouriev+DeMets_2006_G3.txt  readme.Tikku+Cande_1999_JGR.txt  readme.Whittaker++_2007_Science.txt
MLDATA/Marginal_BackarcBasins/: Barker+Burrell_1977_MarGeol.gmt  Barker_1972_EPSL.gmt  Barker_1995_BackArcBasins.gmt  Briais++_1993_JGR.gmt  Doo++_2014_MGR.gmt  Eagles++_2005_JGR.gmt  Gaina++_1998_JGR.gmt  Gaina++_1999_JGR.gmt  Gaina+Muller_2007_ESR.gmt  Hilde+Lee_1984_Tectonophys.gmt  Mrozowski++_1982_Tectonophys.gmt  Patriat++_2015_G3.gmt  References.txt  Sasaki++_2014_EPS.gmt  Sdrolias++_2003_GeolSocAmSpVol.gmt  Sdrolias++_2004_Tectonophys.gmt  Seton_2016_GondwanaResearch.gmt  Weissel++_1982_Tectonophys.gmt  readme.Doo++_2014_MGR.txt  readme.Gaina++_1998_JGR.txt  readme.Gaina++_1999_JGR.txt  readme.Gaina+Muller_2007_ESR.txt  readme.Hilde+Lee_1984_Tectonophys.txt  readme.Mrozowski++_1982_Tectonophys.txt  readme.Sasaki++_2014_EPS.txt
MLDATA/PacificOcean/: Atwater+Severinghaus_1989_GeolSocAm.gmt  Barckhausen++_2008_Geology.gmt  Bassinger++_1969_JGR.gmt  Cande++_1982_EPSL.gmt  Cande++_1995_Science.gmt  Cande++_2000_Nature.gmt  Cande+Haxby_1991_JGR.gmt  Cande+Stock_2004_GJI.gmt  Caress++_1988_JGR.gmt  Croon++_2008_G3.gmt  Currie++_1982_AAPGBull.gmt  Davey++_2006_GRL.gmt  Eagles++_2004_GRL.gmt  Eagles_2003_EPSL.gmt  Eakins+Lonsdale_2003_MGR.gmt  Elvers++_1967_TransAmGeopUn.gmt  Elvers++_1973_EPSL.gmt  Granot++_2009_EPSL.gmt  Granot++_2013_GRL.gmt  Handschumacher++_1981_GeolSocAmMem.gmt  Keller_2004_PhD.gmt  (+30 more)
SFDATA/: ChangeLog  README.SFDATA  SF_Digitizers.txt  SF_news.html  Submissions.txt  build_SF_site.sh  sf_master.sh
TOOLS/: CMakeLists.txt  GNUmakefile  Makefile  README.CMake  README.gsfml
TOOLS/cmake/: ConfigDefault.cmake  ConfigUserAdvancedTemplate.cmake  ConfigUserTemplate.cmake
TOOLS/cmake/modules/: CheckPrototypeExists.cmake  CheckTypeExists.cmake  ConfigCMake.cmake  ConfigureChecks.cmake  CreateDebugSym.cmake  CustomHelperMacros.cmake  FindGDAL.cmake  FindGMT.cmake  FindNETCDF.cmake  ManageString.cmake  NSIS.InstallOptions.ini.in  today.c
TOOLS/doc/: Makefile  fzanalyzer.txt  fzblender.txt  fzinformer.txt  fzmapper.txt  fzmodeler.txt  fzprofiler.txt  mlconverter.txt
TOOLS/src/: CMakeLists.txt  CMakeLists.txt.orig  config.mk.in  fz_analysis.h  fz_funcs.sh.in  fzanalyzer.c  fzblender.c  fzinformer  fzmapper  fzmodeler  fzprofiler  gmt_gsfml_moduleinfo.h  gsfml_config.h.in  gsfml_module.c  gsfml_module.h  mlconverter.c
(+2703 files in other folders)
